--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.h2.console.enabled=true
 
+spring.datasource.url=jdbc:h2:mem:ecommercedb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=alejandro
+spring.datasource.password=alejandro
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
